--- a/package.json
+++ b/package.json
@@ -1,26 +1,59 @@
 {
-  "name": "nba-fantasy-bot",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "biome check",
-    "format": "biome format --write"
-  },
-  "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "@biomejs/biome": "2.2.0"
-  }
+    "name": "nba-fantasy-bot",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build --turbopack",
+        "start": "next start",
+        "lint": "biome check",
+        "format": "biome format --write",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "tsx src/lib/db/migrate.ts",
+        "db:drop": "drizzle-kit drop",
+        "db:pull": "drizzle-kit introspect",
+        "db:push": "drizzle-kit push",
+        "db:studio": "drizzle-kit studio",
+        "db:check": "drizzle-kit check"
+    },
+    "dependencies": {
+        "@ai-sdk/openai": "^2.0.38",
+        "@ai-sdk/react": "^2.0.56",
+        "@neondatabase/serverless": "^1.0.2",
+        "@radix-ui/react-avatar": "^1.1.0",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@t3-oss/env-nextjs": "^0.10.1",
+        "ai": "^5.0.56",
+        "axios": "^1.12.2",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "drizzle-orm": "^0.44.5",
+        "drizzle-zod": "^0.8.3",
+        "lucide-react": "^0.544.0",
+        "nanoid": "^5.1.6",
+        "next": "15.5.4",
+        "postgres": "^3.4.4",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "sonner": "^1.5.0",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "2.2.0",
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "dotenv": "^16.4.5",
+        "drizzle-kit": "^0.30.4",
+        "pg": "^8.12.0",
+        "prettier": "3.6.2",
+        "tailwindcss": "^4",
+        "tsx": "^4.19.2",
+        "typescript": "^5"
+    }
 }
