feat(database): Add access to database for recent stats from 2025

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack",
+        "dev": "next dev",
+        "dev:debug": "NODE_OPTIONS='--inspect' next dev",
         "build": "next build --turbopack",
         "start": "next start",
         "lint": "biome check",
@@ -25,6 +26,7 @@
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "@t3-oss/env-nextjs": "^0.10.1",
+        "@vercel/postgres": "^0.10.0",
         "ai": "^5.0.56",
         "axios": "^1.12.2",
         "class-variance-authority": "^0.7.0",
