--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/themes": "^3.2.1",
         "@t3-oss/env-nextjs": "^0.10.1",
         "@vercel/postgres": "^0.10.0",
         "ai": "^5.0.56",
@@ -39,6 +40,7 @@
         "postgres": "^3.4.4",
         "react": "19.1.0",
         "react-dom": "19.1.0",
+        "react-intersection-observer": "^9.16.0",
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7",
