--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
         "@ai-sdk/openai": "^2.0.38",
         "@ai-sdk/react": "^2.0.56",
         "@neondatabase/serverless": "^1.0.2",
+        "@radix-ui/react-avatar": "^1.1.10",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-switch": "^1.2.6",
+        "@radix-ui/react-tabs": "^1.1.13",
         "@t3-oss/env-nextjs": "^0.10.1",
+        "@tanstack/react-query": "^5.90.2",
+        "@tanstack/react-table": "^8.21.3",
         "@vercel/postgres": "^0.10.0",
         "ai": "^5.0.56",
         "axios": "^1.12.2",
@@ -32,6 +40,7 @@
         "lucide-react": "^0.544.0",
         "nanoid": "^5.1.6",
         "next": "15.5.4",
+        "next-themes": "^0.4.6",
         "postgres": "^3.4.4",
         "react": "19.1.0",
         "react-dom": "19.1.0",
